<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="#6C7DDA"
        android:hint="@string/loan_amount"
        android:inputType="numberDecimal"
        android:padding="16dp"
        android:textAlignment="center"
        android:textColor="#E10505"
        android:textColorHint="#4A148C"
        android:textSize="20sp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/etInterestRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#475AC3"
        android:hint="@string/interest_rate"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="#F10606"
        android:textColorHint="#40C4FF"
        android:textSize="20sp"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/etYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#273BAA"
        android:hint="@string/year"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="#FF1414"
        android:textColorHint="#B388FF"
        android:textSize="20sp"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />
    <TextView
        android:id="@+id/tvTerms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="16dp"
        android:text="@string/loan_term"
        android:textSize="20sp" />
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/monthlyRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/monthly"
            android:textSize="18sp" />
        <RadioButton
            android:id="@+id/quarterlyRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/quarterly"
            android:textSize="18sp" />
        <RadioButton
            android:id="@+id/halfYearlyRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/half_yearly"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/yearlyRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/yearly"
            android:textSize="18sp" />
    </RadioGroup>

    <Button
        android:id="@+id/PreviousBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/Previous_Btn"
        android:textColor="#FF9E80"
        android:textSize="20sp"
        tools:ignore="RtlHardcoded,TextSizeCheck" />
    <Button
        android:id="@+id/listCalculation_Btn"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:textColor="#FF9E80"
        android:textSize="20sp"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/calculate"
        android:textColor="#E1BEE7"
        android:textSize="20sp"
        tools:ignore="RtlHardcoded,TextSizeCheck" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="146dp"
        android:paddingTop="16dp"
        android:text="@string/your_emi_will_appear_here"
        android:textSize="20sp" />
</LinearLayout>

