<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emi_calculator"
        android:textColor="#F30707"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.318"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/rb_twoWheeler"
            android:layout_width="190dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:text="@string/two_wheeler"
            android:textAppearance="?android:textAppearanceMedium"
            android:textSize="25sp"
            tools:ignore="TextSizeCheck"
            tools:layout_editor_absoluteX="8dp" />

        <RadioButton
            android:id="@+id/rb_fourWheeler"
            android:layout_width="190dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:text="@string/four_wheeler"
            android:textAppearance="?android:textAppearanceMedium"
            android:textSize="25sp"
            tools:ignore="TextSizeCheck"
            tools:layout_editor_absoluteX="8dp" />

        <RadioButton
            android:id="@+id/rb_homeLoan"
            android:layout_width="190dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:text="@string/home_loan"
            android:textAppearance="?android:textAppearanceMedium"
            android:textSize="25sp"
            tools:ignore="TextSizeCheck"
            tools:layout_editor_absoluteX="8dp" />
    </RadioGroup>

    <Button
        android:id="@+id/ConBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:text="@string/continue_Btn"
        android:textColor="#FF9E80"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.136"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
